--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@magiql/ide": "file:.yalc/@magiql/ide",
     "@nexus/schema": "^0.19.2",
     "graphiql-playground": "https://gist.github.com/nksaraf/02f2e67cdd500bd4c92a6a30674f55ba.git",
     "graphql": "^15.4.0",
