--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@magiql/ide": "^0.0.13",
+    "@magiql/ide": "file:.yalc/@magiql/ide",
     "@nexus/schema": "^0.19.2",
     "graphiql": "https://gist.github.com/nksaraf/d503c5b47239149ccb9f62ffd9263072.git",
     "graphql": "^15.4.0",
@@ -17,7 +17,7 @@
     "next": "10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "use-monaco": "^0.0.22"
+    "use-monaco": "file:.yalc/use-monaco"
   },
   "devDependencies": {
     "@types/node": "^14.14.12",
