--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
-    "@magiql/ide": "^0.0.17",
+    "@magiql/ide": "^0.0.21",
     "@nexus/schema": "^0.19.2",
     "graphiql": "https://gist.github.com/nksaraf/d503c5b47239149ccb9f62ffd9263072.git",
     "graphql": "^15.4.0",
     "graphql-helix": "^1.2.0",
     "isomorphic-unfetch": "^3.1.0",
     "next": "10.0.0",
+    "nexus": "^1.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "use-monaco": "file:.yalc/use-monaco"
