--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@magiql/ide": "^0.0.21",
+    "@magiql/browser": "^0.0.33",
+    "@magiql/ide": "^0.0.27",
     "@nexus/schema": "^0.19.2",
     "graphiql": "https://gist.github.com/nksaraf/d503c5b47239149ccb9f62ffd9263072.git",
     "graphql": "^15.4.0",
